2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-main.c:
	Add --play to start playing automatically.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* data/sound-juicer.glade:
	  Remove Re-read option from main window, since this is triggered
	  automatically on a CD insert.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (select_track), (play), (pause), (stop),
	(cb_hop_track), (cb_state), (on_tracklist_row_activate):
	  Also set window title when we auto-swap songs, and keep
	  memory while PAUSED.

2005-06-23  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Set the window title to the track name when playing.

2005-06-23  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Check the iter is valid before using it.

2005-06-23  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	Add STATE column, and a state enum.

	* src/sj-main.c:
	Show the track state in the listview.

	* src/sj-play.c:
	Set the track state when starting/stopping a track.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-extracting.c: (on_extract_activate):
	* src/sj-main.c: (on_eject_activate):
	* src/sj-play.h:
	  Release device on extract/eject.
	* src/sj-play.c: (idle_error), (cb_error), (cb_state),
	(stop_playback), (on_play_activate), (on_tracklist_row_activate):
	  Graphical error reporting. Remove a few fixed FIXMEs.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sound-juicer.h:
	* src/sj-main:
	Add sj_window_set_title().

	* src/sj-play.c:
	Use set_title() albeit in a crap manner, and show errors in a crap
	manner.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (setup):
	  Set device.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (cb_hop_track):
	  Cast fix.

2005-06-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/Makefile.am:
	* src/sj-main.c:
	* src/sj-play.[ch]: