@@ -41,6 +41,28 @@
 		<widget class="GtkMenu" id="menuitem1_menu">
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="play_menuitem">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Play / Pause</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_play_activate" last_modification_time="Wed, 22 Jun 2005 21:25:04 GMT"/>
+		      <accelerator key="p" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image80">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-media-play</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkImageMenuItem" id="extract_menuitem">
 		      <property name="visible">True</property>
 		      <property name="sensitive">False</property>
@@ -75,28 +97,6 @@
 			<widget class="GtkImage" id="image69">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-refresh</property>
-			  <property name="icon_size">1</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkImageMenuItem" id="play2">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Play / Pause</property>
-		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_play_activate" last_modification_time="Wed, 22 Jun 2005 21:25:04 GMT"/>
-		      <accelerator key="p" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image80">
-			  <property name="visible">True</property>
-			  <property name="stock">gtk-media-play</property>
 			  <property name="icon_size">1</property>
 			  <property name="xalign">0.5</property>
 			  <property name="yalign">0.5</property>
@@ -498,30 +498,23 @@
 	      <property name="spacing">6</property>
 
 	      <child>
-		<widget class="GtkHScale" id="seek_scale">
-		  <property name="can_focus">True</property>
-		  <property name="draw_value">False</property>
-		  <property name="value_pos">GTK_POS_TOP</property>
-		  <property name="digits">0</property>
-		  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-		  <property name="inverted">False</property>
-		  <property name="adjustment">0 0 1 0.01 0.1 0</property>
-		  <signal name="value_changed" handler="on_seek_moved" last_modification_time="Thu, 23 Jun 2005 09:04:46 GMT"/>
-		  <signal name="button_press_event" handler="on_seek_press" last_modification_time="Thu, 23 Jun 2005 09:05:46 GMT"/>
-		  <signal name="button_release_event" handler="on_seek_release" last_modification_time="Thu, 23 Jun 2005 09:05:55 GMT"/>
-		</widget>
-		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">True</property>
-		  <property name="fill">True</property>
-		</packing>
-	      </child>
-
-	      <child>
 		<widget class="GtkHButtonBox" id="hbuttonbox1">
 		  <property name="visible">True</property>
 		  <property name="layout_style">GTK_BUTTONBOX_END</property>
 		  <property name="spacing">6</property>
+
+		  <child>
+		    <widget class="GtkButton" id="play_button">
+		      <property name="visible">True</property>
+		      <property name="can_default">True</property>
+		      <property name="can_focus">True</property>
+		      <property name="label">gtk-media-play</property>
+		      <property name="use_stock">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="focus_on_click">True</property>
+		      <signal name="clicked" handler="on_play_activate" last_modification_time="Wed, 22 Jun 2005 21:15:28 GMT"/>
+		    </widget>
+		  </child>
 
 		  <child>
 		    <widget class="GtkButton" id="extract_button">
@@ -580,6 +573,10 @@
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">0</property>
 				  <property name="ypad">0</property>
+				  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				  <property name="width_chars">-1</property>
+				  <property name="single_line_mode">False</property>
+				  <property name="angle">0</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -593,25 +590,31 @@
 		      </child>
 		    </widget>
 		  </child>
-
-		  <child>
-		    <widget class="GtkButton" id="play_button">
-		      <property name="visible">True</property>
-		      <property name="can_default">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="label">gtk-media-play</property>
-		      <property name="use_stock">True</property>
-		      <property name="relief">GTK_RELIEF_NORMAL</property>
-		      <property name="focus_on_click">True</property>
-		      <signal name="clicked" handler="on_play_activate" last_modification_time="Wed, 22 Jun 2005 21:15:28 GMT"/>
-		    </widget>
-		  </child>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
 		  <property name="expand">False</property>
 		  <property name="fill">True</property>
-		  <property name="pack_type">GTK_PACK_END</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkHScale" id="seek_scale">
+		  <property name="can_focus">True</property>
+		  <property name="draw_value">False</property>
+		  <property name="value_pos">GTK_POS_TOP</property>
+		  <property name="digits">0</property>
+		  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+		  <property name="inverted">False</property>
+		  <property name="adjustment">0 0 1 0.00999999977648 0.10000000149 0</property>
+		  <signal name="value_changed" handler="on_seek_moved" last_modification_time="Thu, 23 Jun 2005 09:04:46 GMT"/>
+		  <signal name="button_press_event" handler="on_seek_press" last_modification_time="Thu, 23 Jun 2005 09:05:46 GMT"/>
+		  <signal name="button_release_event" handler="on_seek_release" last_modification_time="Thu, 23 Jun 2005 09:05:55 GMT"/>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">True</property>
+		  <property name="fill">True</property>
 		</packing>
 	      </child>
 	    </widget>
