@@ -1,3 +1,11 @@
+2005-06-30  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
+	Re-arrange the buttons a bit.
+
+	* src/sj-main.c:
+	Disable the Play buttons as appropriate.
+
 2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/sj-main.c:
